<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BismillahTest</string>
    <string name="galery">Galeri</string>
    <string name="home">Beranda</string>
    <string name="exp_type">tipe</string>
    <string name="exp_name">nama</string>
    <string name="exp_location">lokasi</string>
    <string name="public_repos">public repository</string>
    <string name="followers">Followers</string>
    <string name="exp_followers">detail followers</string>
    <string name="following">Following</string>
    <string name="exp_following">detail following</string>
    <string name="exp_publicRepos">pub repos</string>
    <string name="exp_realName">real name</string>
    <string name="not_found">User Not Found</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auth_usrname">Auth Username</string>
    <string name="not_have">%1$s Not Have %2$s</string>
    <string name="location_not_found" tools:ignore="ExtraTranslation">Cannot find location</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signed">Sign In</string>
    <string name="already_have_an_account_login">Log In here</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_in">Sign In</string>
    <string name="txt_username">Username</string>
</resources>